[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "keet_lsm"
version = "0.0.1"
description = "Analyzing and creating modelswith Keet"
authors = [
  { name = "Keet" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.8"


[tool.ruff]
line-length = 99
src = ["keet_lsm"]
include = ["pyproject.toml", "keet_lsm/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["keet_lsm"]
force-sort-within-sections = true

